# Team3

./: .env  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  docker-compose.backend.yml  docker-compose.redis.yml  docker-compose.wamp.yml  requirements.txt
aruba-budget-calc-be/: Dockerfile
aruba-budget-calc-be/team3-api/: README.md  pyproject.toml
aruba-budget-calc-be/team3-api/team3_api/: collections.json  config.py  main.py  utils.py
aruba-budget-calc-be/team3-core/: pyproject.toml
aruba-budget-calc-be/team3-core/team3_core/: config.py  main.py
aruba-budget-calc-be/team3-lib/: README.md  pyproject.toml
aruba-budget-calc-be/team3-lib/team3_lib/: config.py  wamp.py
aruba-budget-calc-be/team3-test/: pyproject.toml
aruba-budget-calc-be/team3-test/team3_test/: config.py  main.py
aruba-budget-calc-fe/: Dockerfile  OVERVIEW.md  README.md  TODO.md  db.json  package-lock.json  package.json  tailwind.config.ts
aruba-budget-calc-fe/src/: app.css  app.html  types.ts
aruba-budget-calc-fe/src/catalogs/: computing.json  container.json  networking.json  storage.json
aruba-budget-calc-fe/src/lib/components/: button.svelte  cart-footer.svelte  configuration-footer.svelte  project-name-form.svelte  quantity-reservation-form.svelte  resource-type-selector.svelte  server-configurator.svelte
aruba-budget-calc-fe/src/lib/stores/: cart.ts  index.ts  resource-creation.ts
aruba-budget-calc-fe/src/lib/utils/: calculation.ts
aruba-budget-calc-fe/src/routes/: +layout.svelte  +page.svelte
aruba-budget-calc-fe/src/routes/addresource/: +page.svelte
aruba-budget-calc-fe/src/routes/calculation/: +layout.svelte
aruba-budget-calc-fe/src/routes/calculation/addresource/: +page.svelte
aruba-budget-calc-fe/src/routes/calculation/cart/: +page.svelte
aruba-budget-calc-fe/src/routes/cart/: +page.svelte
bondy/etc/: bondy.conf  security_config.json
data/: pricing.sql
db/dump/: init.sql
docs/: architecture.md  flusso.md
