[project]
name = "team3-api"
dynamic = ["version"]
description = ""
authors = [
    {name = "NiGia", email = "ningia.coder@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.version]
source = "file"
path = "team3_api/__init__.py"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
api_run = "team3_api.main:main"

[tool.pdm.build]
includes = ["team3_api"]
